Update for Tomcat 9, with the systemd sandbox changes